# ChangeLog for x11-misc/xpad
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xpad/ChangeLog,v 1.12 2003/03/09 20:38:33 aliz Exp $

*xpad-1.9.1 (09 Mar 2003)

  09 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*xpad-1.7 (03 Dec 2002)

  03 Dec 2002; L. Boshell <leonardop@gentoo.org> : New version. Thanks to
  Michael Terry for letting us know about it on bug #11181.

*xpad-1.6.1 (25 Oct 2002)

  25 Oct 2002; foser <foser@gentoo.org> xpad-1.6.1.ebuild :

  New minor bugfix version

*xpad-1.6 (24 Oct 2002)

  24 Oct 2002; foser <foser@gentoo.org> xpad-1.6.ebuild :

  New version

*xpad-1.5.1 (18 Oct 2002)

  20 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> xpad-1.2.1.ebuild 
  xpad-1.4.ebuild :

  Added ppc to KEYWORDS.

  18 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> xpad-1.5.1.ebuild :
  Version bump, found by Michael Terry <msterry@student.umass.edu> in #6900.

* xpad-1.4 (12 August 2002)

  12 August 2002; Sascha Schwabbauer <cybersystem@gentoo.org> xpad-1.4.ebuild :

  Version bump. Ebuild contributed by Michael Terry <msterry@student.umass.edu>.

xpad-1.2.1 (28 Jul 2002)

  28 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> xpad-1.2.1.ebuild :

  Version bump. Ebuild contributed by Michael Terry <msterry@student.umass.edu>.

*xpad-1.1 (2 June 2002)
  2 June 2002; Michael Terry <msterry@student.umass.edu> ChangeLog :

  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.