@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/xpad
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xpad/ChangeLog,v 1.12 2003/03/09 20:38:33 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xpad/ChangeLog,v 1.13 2003/04/07 15:10:37 weeve Exp $
+
+*xpad-1.10.1 (07 Apr 2003)
+
+  07 Apr 2003; Jason Wever <weeve@gentoo.org> xpad-1.10.1.ebuild:
+  New version.
 
 *xpad-1.9.1 (09 Mar 2003)
 
